--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://MarcoGrimaldo.github.io/recorre-teoti",
+  "homepage":".",
   "name": "recorre-teoti",
   "version": "0.1.0",
   "private": true,
