--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":".",
+  "homepage":"https://marcogrimaldo.github.io/recorre-teoti/",
   "name": "recorre-teoti",
   "version": "0.1.0",
   "private": true,
